fix: adjust color variables in globals.css for better contrast in light and dark modes

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -20,7 +20,7 @@ html {
   :root {
 		--background: 0 0% 100%;
 		--foreground: 20 14.3% 4.1%;
-		--card: 0 0% 100%;
+		--card: 0 0% 97%;
 		--card-foreground: 20 14.3% 4.1%;
 		--popover: 0 0% 100%;
 		--popover-foreground: 20 14.3% 4.1%;
@@ -41,9 +41,9 @@ html {
     }
 
     .dark {
-		--background: 20 14.3% 4.1%;
+		--background: 20 14.3% 5.1%;
 		--foreground: 60 9.1% 97.8%;
-		--card: 20 14.3% 4.1%;
+		--card: 20 14.3% 0.1%;
 		--card-foreground: 60 9.1% 97.8%;
 		--popover: 20 14.3% 4.1%;
 		--popover-foreground: 60 9.1% 97.8%;
